--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,3 +49,6 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # bell
 set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+# zsh
+set-option -g default-shell /bin/zsh
