--- a/xmonad/stack.yaml
+++ b/xmonad/stack.yaml
@@ -3,8 +3,7 @@ resolver: lts-11.7
 packages:
 - xmonad
 - xmonad-contrib
-- taffybar
-- taffybar/taffybar
+- ../my-taffybar/taffybar
 
 extra-deps:
 - X11-xft-0.3.1
