--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.fontFamily": "Hack, 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "editor.fontSize": 18,
-    "workbench.colorTheme": "Dracula Soft"
+    "workbench.colorTheme": "Dracula Soft",
+    "editor.minimap.enabled": false
 }
