--- a/my-taffybar/my-taffybar.cabal
+++ b/my-taffybar/my-taffybar.cabal
@@ -1,7 +1,7 @@
 name:                my-taffybar
 version:             0.1.0.0
-author:              author
-maintainer:          email@email.com
+author:              Derrick Weis
+maintainer:          derrick@derrickweis.com
 build-type:          Simple
 cabal-version:       >=1.10
 
