--- a/my-taffybar/stack.yaml
+++ b/my-taffybar/stack.yaml
@@ -34,6 +34,7 @@ extra-deps:
 - status-notifier-item-0.3.0.0
 - time-units-1.0.0
 - xml-helpers-1.0.0
+#- gtk-traymanager-1.0.1
 resolver: lts-11.16
 nix:
   packages:
