--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -92,4 +92,8 @@ wintypes:
   tooltip = { fade = true; shadow = false; opacity = 0.75; focus = true; };
 };
 
+opacity-rule = [
+  "95:class_g = 'Hyper' && focused",
+  "80:class_g = 'Hyper' && !focused"
+];
 
