--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,17 +1,15 @@
 set $mod Mod4
 
-gaps inner 5
-gaps outer 5
-
-font pango:DejaVu Sans Mono 12
+font pango:Hack, FontAwesome 12
 
 floating_modifier $mod
 
-bindsym $mod+Shift+Return exec hyper #i3-sensible-terminal
+bindsym $mod+Return exec emacs
+bindsym $mod+Shift+Return exec alacritty
 
 bindsym $mod+Shift+q kill
 
-bindsym $mod+p exec rofi -show combi
+bindsym $mod+p exec rofi -show run
 
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -34,7 +32,6 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 #bindsym $mod+h split h
-
 #bindsym $mod+v split v
 
 bindsym $mod+f fullscreen toggle
@@ -122,3 +119,31 @@ exec_always --no-startup-id nm-applet
 exec --no-startup-id  xscreensaver -no-splash
 exec --no-startup-id compton -b &
 exec --no-startup-id volumeicon
+
+set $bgb            #282a36
+set $bg             #282a36AA
+set $fg             #f8f8f2
+set $tf             #f8f8f2AA
+set $hi             #f1fa7c
+set $tx             #040404
+set $pk             #ff79c6
+# yellow
+set $yw             #f1fa7c
+# green
+set $gn             #50fa7b
+# red
+set $rd             #ff5555
+set $id             #ff79c6
+
+client.focused              $id     $pk         $tx     $id
+client.unfocused            $bg     $bg         $tf     $id
+client.focused_inactive     $bg     $bg         $pk     $id
+client.urgent               $yw     $yw         $tx     $id
+#border & indicator are ignored
+client.placeholder $bg $bg $bg $bg
+
+for_window [class="^.*"] border pixel 2
+smart_borders on
+gaps inner 6
+gaps outer 3
+
