--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
+Code/.config/Code/Backups/
+Code/.config/Code/Cache/
+Code/.config/Code/CachedData/
+Code/.config/Code/CachedExtensions/
+Code/.config/Code/Cookies
+Code/.config/Code/Cookies-journal
+Code/.config/Code/GPUCache/
+Code/.config/Code/Local Storage/
+Code/.config/Code/Preferences
+Code/.config/Code/languagepacks.json
+Code/.config/Code/logs/
+Code/.config/Code/machineid
+Code/.config/Code/storage.json
+Code/.config/Code/User/workspaceStorage/*
 vim/.vim/plugged/*
 vim/.vim/.netrwhist
-xmonad/xmonad.errors
-xmonad/xmonad.hi
-xmonad/xmonad.o
-xmonad/local-bin
-xmonad/*x86_64-linux
+stack/.stack/build-plan-cache/*
+stack/.stack/build-plan/*
+stack/.stack/global-project/*
+stack/.stack/indices/*
+stack/.stack/loaded-snapshot-cache/*
+stack/.stack/snapshots/*
+taffybar/.stack-work
+.stack-work
+*.swp
+*.errors
+*.o
+*.hi
+*.state
+local-bin
+xmonad/xmonad.state
