--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -86,19 +86,19 @@ tabspaces: 8
 font:
   # Normal (roman) font face
   normal:
-    family: Roboto Mono for Powerline
+    family: Hack
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
   # Bold font face
   bold:
-    family: Roboto Mono for Powerline
+    family: Hack
     # The `style` can be specified to pick a specific face.
     #style: Bold
 
   # Italic font face
   italic:
-    family: Roboto Mono for Powerline
+    family: Hack
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
