--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -90,7 +90,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bindsym XF86AudioRaiseVolume exec "amixer -q set Master 5%+"
 bindsym XF86AudioLowerVolume exec "amixer -q set Master 5%-"
 
-bindsym $mod+Shift+z exec "xscreensaver-command -lock; xset dpms force off"
+bindsym $mod+Shift+z exec "slimlock"
 
 mode "resize" {
         bindsym h resize shrink width 10 px or 10 ppt
