--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,37 +15,29 @@ bind-key C-b last-pane
 
 set -s escape-time 0
 
-#### COLOUR (Solarized 256)
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+# Dracula Colors
+set -g status-bg "colour59"
+set -g message-command-fg "colour117"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status "on"
+set -g pane-active-border-fg "colour215"
+set -g message-bg "colour59"
+set -g status-right-length "100"
+set -g status-right-attr "none"
+set -g message-fg "colour117"
+set -g message-command-bg "colour59"
+set -g status-attr "none"
+set -g pane-border-fg "colour59"
+set -g status-left-attr "none"
+setw -g window-status-fg "colour231"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour59"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour215"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour59"
+set -g status-left "#[fg=colour17,bg=colour215] #S #[fg=colour215,bg=colour59,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour61,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour231,bg=colour61] %Y-%m-%d | %H:%M #[fg=colour141,bg=colour61,nobold,nounderscore,noitalics]#[fg=colour17,bg=colour141] #h "
+setw -g window-status-format "#[fg=colour231,bg=colour59] #I |#[fg=colour231,bg=colour59] #W "
+setw -g window-status-current-format "#[fg=colour59,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour59] #I |#[fg=colour117,bg=colour59] #W #[fg=colour59,bg=colour59,nobold,nounderscore,noitalics]"
