--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -47,12 +47,11 @@ alpha-step = 0.06;
 # inactive-dim-fixed = true;
 
 ### Blur options
-# blur-background = true;
-# blur-background-frame = true;
-# blur-kern = "3x3box"
-# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
-# blur-background-fixed = true;
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+blur-background = true; # Blur background of opaque windows with transparent frames as well.
+blur-background-frame = true; # Do not let blur radius adjust based on window opacity.
+blur-background-fixed = true;
+blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1"
 
 ### Fading
 fading = true;
