--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -7,7 +7,7 @@ floating_modifier $mod
 bindsym $mod+Return exec emacs
 bindsym $mod+Shift+Return exec alacritty
 
-bindsym $mod+Shift+q kill
+bindsym $mod+Shift+x kill
 
 bindsym $mod+p exec rofi -show run
 
@@ -85,12 +85,14 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+q exec "mate-session-save --logout-dialog"
 
 bindsym XF86AudioRaiseVolume exec "amixer -q set Master 5%+"
 bindsym XF86AudioLowerVolume exec "amixer -q set Master 5%-"
 
-bindsym $mod+Shift+z exec "slimlock"
+#bindsym $mod+Shift+z exec "slimlock"
+bindsym $mod+Shift+z exec "mate-screensaver-command -l"
 
 mode "resize" {
         bindsym h resize shrink width 10 px or 10 ppt
@@ -114,11 +116,12 @@ bar {
         status_command i3status -c ~/.config/i3/i3status.conf
 }
 
-exec_always --no-startup-id ~/.fehbg
-exec_always --no-startup-id nm-applet
-exec --no-startup-id  xscreensaver -no-splash
+#
+#exec_always --no-startup-id ~/.fehbg
+#exec_always --no-startup-id nm-applet
+#exec --no-startup-id  xscreensaver -no-splash
 exec --no-startup-id compton -b &
-exec --no-startup-id volumeicon
+#exec --no-startup-id volumeicon
 
 set $bgb            #282a36
 set $bg             #282a36AA
