--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -85,7 +85,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
-#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+#bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+q exec "mate-session-save --logout-dialog"
 
 bindsym XF86AudioRaiseVolume exec "amixer -q set Master 5%+"
@@ -93,6 +93,7 @@ bindsym XF86AudioLowerVolume exec "amixer -q set Master 5%-"
 
 #bindsym $mod+Shift+z exec "slimlock"
 bindsym $mod+Shift+z exec "mate-screensaver-command -l"
+#bindsym $mod+Shift+z exec "light-locker-command -l"
 
 mode "resize" {
         bindsym h resize shrink width 10 px or 10 ppt
@@ -112,14 +113,14 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bar {
-        status_command i3status -c ~/.config/i3/i3status.conf
-}
+#bar {
+#        status_command i3status -c ~/.config/i3/i3status.conf
+#}
 
-#
 #exec_always --no-startup-id ~/.fehbg
 #exec_always --no-startup-id nm-applet
 #exec --no-startup-id  xscreensaver -no-splash
+#exec --no-startup-id light-locker &
 exec --no-startup-id compton -b &
 #exec --no-startup-id volumeicon
 
@@ -147,6 +148,6 @@ client.placeholder $bg $bg $bg $bg
 
 for_window [class="^.*"] border pixel 2
 smart_borders on
-gaps inner 6
-gaps outer 3
+gaps inner 4
+gaps outer 2
 
