--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -7,58 +7,58 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
-        interval = 5
+  colors = true
+  interval = 5
 }
 
 order += "disk /"
-#order += "volume master"
+order += "volume master"
 order += "wireless _first_"
 order += "battery 1"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = " (%essid - %quality) %ip"
-        format_down = "down"
+  format_up = " (%essid - %quality) %ip"
+  format_down = "down"
 }
 
 
-#volume master {
-#        format = " %volume"
-#        format_muted = " (%volume)"
-#        device = "pulse:1"
-#        mixer = "Master"
-#        mixer_idx = 0
-#}
+volume master {
+  format = " %volume"
+  format_muted = " (%volume)"
+  device = "default"
+  mixer = "Master"
+  mixer_idx = 0
+}
 
 battery 1 {
-        format = "%status %percentage %remaining"
-        status_bat = ""
-        status_chr = ""
-        status_full = ""
-        low_threshold = 30
-        threshold_type = percentage
-        integer_battery_capacity = true
-        color_good = "#0000FF"
+  format = "%status %percentage %remaining"
+  status_bat = ""
+  status_chr = ""
+  status_full = ""
+  low_threshold = 30
+  threshold_type = percentage
+  integer_battery_capacity = true
+  color_good = "#0000FF"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+  pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+  pidfile = "/var/run/vpnc/pid"
 }
 
 tztime local {
-        format = " %h %d, %Y %I:%M"
+  format = " %h %d, %Y %I:%M"
 }
 
 load {
-        format = " %1min"
+  format = " %1min"
 }
 
 disk "/" {
-        format = " %avail"
+  format = " %avail"
 }
