--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -1,4 +1,6 @@
-rofi.combi-modi:    window,drun,ssh
-rofi.theme:         dracula
-rofi.font:          hack 16
-rofi.modi:          combi
+rofi.combi-modi:      window,drun,ssh
+rofi.theme:           dracula
+rofi.font:            hack 16
+rofi.modi:            combi
+rofi.drun-icon-theme: Numix Square
+rofi.show-icons:      true
