--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -46,6 +46,8 @@ bindsym $mod+Shift+space floating toggle
 
 bindsym $mod+space focus mode_toggle
 
+bindsym $mod+Ctrl+4 exec --no-startup-id mate-screenshot --interactive
+
 # focus the parent container
 bindsym $mod+a focus parent
 
