--- a/Code/.config/Code/User/settings.json
+++ b/Code/.config/Code/User/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.fontFamily": "Hack, 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
     "workbench.colorTheme": "Dracula Soft",
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "C_Cpp.updateChannel": "Insiders"
 }
